restricted select bones in 3d view #41227

Closed
opened 2014-07-28 23:47:54 +02:00 by Ivam Pretti · 6 comments

System Information
Ubuntu 14.04, Intel onboard card

Blender Version 2.71 official release
Reproduceable: YES
Crash of Blender:NO

Short description of error
A bone with restric select on 3d view become selected.

Exact steps for others to reproduce the error
You just need an armature with at least two bones. One selectable and other unselectable. With the selectable bone selected, press Shift+H on the keyboard to hide the non selected bones. The unselectable bone will hide, when you turn visible again pressing Alt+H the unselectable bone become selected, and you can move or pose the bone with all the others bones selected. I think the correct when you press Alt+H should be the unselectable bone doesnt be selected but the hide option should be ok.

System Information Ubuntu 14.04, Intel onboard card Blender Version 2.71 official release Reproduceable: YES Crash of Blender:NO Short description of error A bone with restric select on 3d view become selected. **Exact steps for others to reproduce the error** You just need an armature with at least two bones. One selectable and other unselectable. With the selectable bone selected, press Shift+H on the keyboard to hide the non selected bones. The unselectable bone will hide, when you turn visible again pressing Alt+H the unselectable bone become selected, and you can move or pose the bone with all the others bones selected. I think the correct when you press Alt+H should be the unselectable bone doesnt be selected but the hide option should be ok.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ivampretti

Added subscriber: @ivampretti
Bastien Montagne self-assigned this 2014-07-29 07:34:57 +02:00

Note mere objects are also affected by this bug.

Note mere objects are also affected by this bug.

This issue was referenced by e0fd1bf432

This issue was referenced by e0fd1bf4329f41e24ada5b880dd3e98a1dffb17d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e0fd1bf432.

Closed by commit e0fd1bf432.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41227
No description provided.