Fix T41227: Do not select unselectable items when unhiding them!